kubernetes/gateway/referencegrant-traefik-to-ingress-lab.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: allow-traefik-routes-to-frontend-service
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: traefik
  to:
    - group: ""
      kind: Service
      name: svc-frontend-ha
