kubernetes/gateway/api-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: lab-gateway
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: uppercutanalytics.com
    - name: https
      protocol: HTTPS
      port: 443
      hostname: uppercutanalytics.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: uppercutanalytics-tls
