kubernetes/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
spec:
  hostnames:
    - uppercutanalytics.com
    - www.uppercutanalytics.com
  parentRefs:
    - name: lab-gateway
      sectionName: http
    - name: lab-gateway
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: svc-frontend-ha
          port: 80
